* Ranged combat has been rewritten from the ground up.

Branches, environment
---------------------
* Crypt is now three levels (was five).
* Some areas of the Tomb layout can now vary.
* Mechanical traps no longer drop ammo.
* Troves asking for items require that item to be unequipped.
* The Abyss no longer sometimes blocks blinking.

Character
---------
* Formicids can no longer throw large rocks.
* Tengu now gain permaflight at XL14 (was 15).
* All non-undead forms can eat and drink normally.
* All forms can butcher.
* Wisp form can read scrolls and cannot blink on demand.
* Wanderers have tweaked starting kits with generally better items.
* Teleportitis cannot be controlled.
* Player clinging (seen only in Spider Form and with the boots of the Spider)
  is no more.
* Kobolds, hill orcs, and ogres are no longer saprovorous.
* Ogres and centaurs no longer have a fast metabolism; halflings no longer
  have a slow metabolism.
* Centaurs are no longer herbivorous.
* Vampires:
  - always get the full effect of all potions;
  - can always mutate; and
  - always get the full effect of all mutations.

Monsters
--------
* Many enemy glyphs have been adjusted. See 0.14_monster_glyphs.txt.
* Corrosion affects all of your equipment, but only temporarily.
* Enemies are more intelligent about using area-of-attack spells such as
  Symbol of Torment and Chain Lightning when you are not in sight.
* Manticores now move as fast as the player.
* Komodo dragons now bite harder but don't sicken the player.
* Deep dwarf death knights are now just death knights.
* Manticores have an unlimited number of spike volleys.
* Base draconians can become nonbase draconians with experience.
* Undead and nonliving enemies regenerate as fast as other enemies.
* Ghouls and necrophages can no longer equip weapons or armour.
* Monster melee attacks can no longer destroy items.
* Silver statues and orange crystal statues are immune to disintegration,