@@ -661,8 +661,8 @@ unusual. When the inventory screen shows "-more-", to show you that there is
 another page of items, you can type the letter of the item you want, even if it
 is not visible, instead of pressing Space or Enter to see the next page.
 
-You can carry at most 52 items at once, and your total weight is limited by your
-carrying capacity. Both of these are printed at the top of the inventory screen.
+You can carry at most 52 items at once, and your item slot usage is printed at
+the top of the inventory screen.
 
 You can use the adjust command (the '=' key) to change the letters to which your
 possessions are assigned. This command can be used to change spell or ability
@@ -933,7 +933,7 @@ $ Gold
 ========================================
 
 Gold can be used to buy items should you run across shops. There are also a
-few more esoteric uses for gold. Gold coins do not have any weight in Crawl.
+few more esoteric uses for gold.
 
 Whenever you pick up gold, your total wealth is shown as well. Should you want
 to have a glance at your finances at some other opportunity, pressing '$' (or
