@@ -16,9 +16,6 @@ There are shortcuts to quickly select several items in succession:
 <w>'</w>   moves the cursor down without changing selection
 The cursor is usually hidden; pressing <w>.</w> or <w>'</w> makes it appear.
 
-<h>Show weights</h>
-Pressing <w>Ctrl-W</w> toggles the display of item weights.
-
 <h>Category shortcuts</h>
 You can quickly select items by type by pressing:
 <w>!</w>   potions      <w>(</w>   weapons        <w>)</w>   ammunition      <w>[</w>   armour
